src/App.css
body {
  font-family: Arial, sans-serif;
  background-color: #f5f5f5;
  margin: 0;
  padding: 0;
}

.App {
  text-align: left;
}

header {
  background-color: #282c34;
  padding: 20px;
  color: white;
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

header img {
  height: 40px;
  margin-right: 20px;
}

main {
  padding: 20px;
}

ul {
  list-style-type: none;
  padding: 0;
}

li {
  background-color: white;
  margin: 10px 0;
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  display: flex;
  align-items: flex-start;
  text-align: left;
}

h2 {
  margin: 0 0 10px;
  text-align: left;
}

a {
  color: #3498db;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

/* Vote Section Styles */
.vote-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-right: 20px;
}

.vote-section button {
  background: none;
  border: none;
  font-size: 20px;
  cursor: pointer;
}

.vote-section span {
  font-size: 18px;
  font-weight: bold;
  margin: 5px 0;
}

/* Post Content Styles */
.post-content {
  flex: 1;
  text-align: left;
}

.post-content img {
  max-width: 100%;
  max-height: 300px;
  height: auto;
  margin: 10px 0;
}

.post-content a {
  display: block;
  margin-top: 10px;
}

.post-content p {
  margin: 10px 0;
}

/* Search Bar Styles */
form {
  display: flex;
  align-items: center;
  margin-left: 20px;
  margin-top: 5px;
}

input {
  padding: 5px;
  font-size: 16px;
  border-radius: 8px;
}

button {
  padding: 5px 10px;
  margin-left: 10px;
  background-color: #3498db;
  color: white;
  border: none;
  cursor: pointer;
  border-radius: 8px;
}

button:hover {
  background-color: #2980b9;
}

